# sycl-tla

./: README.md
applications/flash_attention_v2/collective/: copy_block_slm.hpp  xe_fmha_fwd_epilogue.hpp  xe_fmha_fwd_mainloop.hpp
applications/flash_attention_v2/kernel/: xe_fhma_fwd_kernel.hpp  xe_fmha_fwd_kernel.hpp  xe_tile_scheduler.hpp
benchmarks/flash_attention/: CMakeLists.txt  benchmark_runner.hpp  fmha_configuration.hpp
examples/06_bmg_flash_attention/: xe_fmha_fwd_runner.hpp
examples/12_xe20_moe_gemm_cute_interface/: 12_xe20_moe_gemm_cute_interface.cpp
examples/cute/tutorial/: bgemm_bmg_legacy.cpp
include/cute/arch/: copy_xe.hpp
include/cute/atom/: copy_traits_xe_2d.hpp
include/cute/util/compat/: launch.hpp
python/cutlass_library/: generator.py  library.py
test/python/cutlass/gemm/: gemm_generate_xe.py
test/unit/cute/intel_xe/: reorder.cpp
tools/util/include/cutlass/util/: sycl_event_manager.hpp
